# speechEmotionRecognition

./: CMakeLists.txt  README.md  featSMILExtract.cpp  featSMILExtract.h  inference.cpp  inference.h  meanAndStdData.h  settings.h  speechEmotionRecognition  speechEmotionRecognitionApi.h  speechEmotionRecognitonJni.cpp
